--- a/X-Ray Scanner/packages.config
+++ b/X-Ray Scanner/packages.config
@@ -4,4 +4,5 @@
   <package id="MaterialDesignColors" version="1.1.1" targetFramework="net452" />
   <package id="MaterialDesignThemes" version="1.1.0.234" targetFramework="net452" />
   <package id="MaterialDesignThemes.MahApps" version="0.0.3" targetFramework="net452" />
+  <package id="TrustSoft.Xaml.ShaderEffects" version="0.1.1.0" targetFramework="net452" />
 </packages>
