Переименовал доп. файл MainMindiw в EthernetTabControl.

--- a/X-Ray Scanner/X-Ray Scanner.csproj
+++ b/X-Ray Scanner/X-Ray Scanner.csproj
@@ -82,7 +82,7 @@
     </ApplicationDefinition>
     <Compile Include="ColorToBrushConverter.cs" />
     <Compile Include="CustomTemplateImage.cs" />
-    <Compile Include="MainWindow.cs" />
+    <Compile Include="EthernetTabControl.cs" />
     <Compile Include="MouseHandlingMode.cs" />
     <Compile Include="ScaleToPercentConverter.cs" />
     <Compile Include="XRayImage.cs" />
