Закоментил старое TCP соединение. Дописал новое в классе MainWindows.cs. По нажатию кнопки пытается с интервалом 3с установить соединение по заданому IP. -Никак не реагирует на разрыв соединения. -Не налажена отпрака и получение данных. -Код в не четабельном виде.

--- a/X-Ray Scanner/X-Ray Scanner.csproj
+++ b/X-Ray Scanner/X-Ray Scanner.csproj
@@ -80,6 +80,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AsyncTcpClient.cs" />
     <Compile Include="ColorToBrushConverter.cs" />
     <Compile Include="CustomTemplateImage.cs" />
     <Compile Include="EthernetTabControl.cs" />
